<resources>
    <string name="app_name">Tikety</string>
    <string name="splash_text">Wisata Jadi Lebbih Asoy!</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="sign_in">Sign In</string>
    <string name="tag_line">Discover \nThe Beauty \nOf Earth</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="register_title">Create New Account</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Name</string>
    <string name="bio_label">Bio</string>
    <string name="label_register_success">Kamu Hebat</string>
    <string name="caption_register_success">Selamat datang pada TiketSaya \ndan nikmati wisatamu</string>
    <string name="explore_now">Explore Now</string>
    <string name="my_dashboard">My Dashboard</string>
</resources>
