<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF1F8"
    tools:context=".RegisterSuccess">

    <ImageView
        android:id="@+id/illustrationSuccess"
        android:layout_width="276dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/illustration_success_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_2_bold"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/label_register_success"
        android:textColor="@color/carbon"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustrationSuccess" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/exo_2"
        android:gravity="center_horizontal"
        android:text="@string/caption_register_success"
        android:textColor="@color/grayPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_explore"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_primary"
        android:lineSpacingExtra="4sp"
        android:text="@string/explore_now"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:fontFamily="@font/exo_2" />



</android.support.constraint.ConstraintLayout>